12 February 2010: Wouter
	- Re-query pattern changed on validation failure.  To protect troubled
	  authority servers, unbound caches a failure for the DNSKEY or DS
	  records for the entire zone, and only retries that 900 seconds later.
	  This implies that only a handful of packets are sent extra to the
	  authority if the zone fails.

11 February 2010: Wouter
	- ldns tarball update for long label length syntax error fix.
	- iana portlist updated.

9 February 2010: Wouter
	- Fixup in compat snprintf routine, %f 1.02 and %g support.
	- include math.h for testbound test compile portability.

2 February 2010: Wouter
	- Updated url of IANA itar, interim trust anchor repository, in script.

1 February 2010: Wouter
	- iana portlist updated.
	- configure test for memcmp portability.

27 January 2010: Wouter
	- removed warning on format string in validator error log statement.
	- iana portlist updated.

22 January 2010: Wouter
	- libtool finish the install of unbound python dynamic library.

21 January 2010: Wouter
	- acx_nlnetlabs.m4 synchronised with nsd's version.

20 January 2010: Wouter
	- Fixup lookup trouble for parent-child domains on the first query.

14 January 2010: Wouter
	- Fixup ldns detection to also check for header files.

13 January 2010: Wouter
	- prefetch-key option that performs DNSKEY queries earlier in the
	  validation process, and that could halve the latency on DNSSEC
	  queries.  It takes some extra processing (CPU, a cache is needed).

12 January 2010: Wouter
	- Fix unbound-checkconf for auto-trust-anchor-file present checks.

8 January 2010: Wouter
	- Fix for parent-child disagreement code which could have trouble
	  when (a) ipv6 was disabled and (b) the TTL for parent and child
	  were different.  There were two bugs, the parent-side information
	  is fixed to no longer block lookup of child side information and
	  the iterator is fixed to no longer attempt to get ipv6 when it is
	  not enabled and then give up in failure.